#226 Contact form issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3380,6 +3380,9 @@ Pirate Forms
 .pirate_forms_wrap .form_field_wrap textarea {
 	min-height: 100px;
 }
+.pirate_forms_wrap .form_field_wrap label {
+	float: left;
+}
 
 /* -------------------------------------------------------------------
 Widgets
